--- a/scout/src/main/res/layout/activity_match_scouting_data.xml
+++ b/scout/src/main/res/layout/activity_match_scouting_data.xml
@@ -16,7 +16,7 @@
             <include layout="@layout/toolbar"
                 android:id="@+id/matchdata_toolbar"/>
 
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/matchdata_tablayout"
