--- a/scout/src/main/res/layout/activity_stand_scout.xml
+++ b/scout/src/main/res/layout/activity_stand_scout.xml
@@ -15,7 +15,7 @@
             <include layout="@layout/toolbar"
                 android:id="@+id/matchscout_toolbar"/>
 
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/matchscout_tablayout"
