--- a/scout/src/main/res/layout/fragment_stand_scout_auton.xml
+++ b/scout/src/main/res/layout/fragment_stand_scout_auton.xml
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:padding="25dp"
-                android:text="Crosses Initiation Line"
+                android:text="Does not Cross Initiation Line"
                 android:theme="@style/MVRTButtonStyle" />
 
             <TextView
